--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="./js/client.js"></script>
+    Add this power up in Trello and get agile!
   </body>
 </html>
